2010-08-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	In .netrc file, if machine name starts ".", aria2 performs domain
	match instead of exact match. This is an extension of aria2.
	* src/Netrc.h

2010-08-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug which prevents HTTP redirection from working when
	downloading multiple files from same host.
	* src/AbstractCommand.cc
	* src/FileEntry.cc

2010-08-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Release 1.10.1

2010-08-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Polish and Turkish translations. Thanks to all
	translators.
	* po/pl.po
	* po/tr.po

2010-08-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated po templates.
	* po/aria2.pot

2010-08-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added a note about the number of connections to help message.
	* src/version_usage.cc

2010-08-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Run PeerLookupTask more frequently when the number of peer is low.
	* src/DHTGetPeersCommand.cc
	* src/DHTGetPeersCommand.h

2010-08-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Drop connection when bad ut_metadata is received..
	* src/UTMetadataDataExtensionMessage.cc

2010-08-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Drop connection when BtRuntime::isHalt() is true.
	* src/PeerReceiveHandshakeCommand.cc

2010-08-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed getMissingFastPiece(piece) and getMissingFastPiece(piece,
	excludedIndexes) from PieceStorage. Done some code cleanup.
	* src/DefaultPieceStorage.h
	* src/PieceStorage.h
	* src/UnknownLengthPieceStorage.cc
	* src/UnknownLengthPieceStorage.h
	* test/MockPieceStorage.h

2010-08-29  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Pass excludedIndexes when getting metadata piece.
	* src/UTMetadataRequestFactory.cc